...
                                            <rect key="frame" x="91" y="8" width="94" height="21"/>
                                            <animations/>
                                            <accessibility key="accessibilityConfiguration" label="cellUserName"/>
                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Tweets" id="Xw0-OB-Xoz">
                        <barButtonItem key="leftBarButtonItem" systemItem="camera" id="0cP-Aq-nZp">
                            <connections>
...
                                <rect key="frame" x="20" y="72" width="60" height="60"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="tweetDetailUserButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="3Ey-sN-INj"/>
...
                                <rect key="frame" x="88" y="72" width="492" height="21"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="tweetDetailUserName"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                <rect key="frame" x="250" y="28" width="100" height="100"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="userDetailImageView">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="237" y="136" width="126" height="21"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="userDetailUserName"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                <rect key="frame" x="282" y="252" width="37" height="30"/>
                                <animations/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <segue destination="hM1-48-KPa" kind="unwind" unwindAction="unwindToTweetDetailVC:" id="Uzw-b3-tbR"/>
...
